Fixed contrast issues

--- a/css/main.css
+++ b/css/main.css
@@ -29,13 +29,13 @@ h2 {
   font-weight: 800;
   font-style: normal;
   font-size: 3.5em;
-  color: #5e9e9c;
+  color: #487D7A;
   text-align: left;
   margin-left: 15px;
 }
 
 h3 {
-  color: #c5622b;
+  color: #9C3B07;
   font-size: 1.5em;
   font-weight: 600;
 }
@@ -182,7 +182,7 @@ main {
 }
 
 #about {
-  background: #fffaf1;
+  background: #fdfaf4;
   padding: 80px 0 100px 0;
   width: 100%;
   display: flex;
@@ -236,17 +236,17 @@ main {
 }
 
 #web-dev {
-  color: white;
-  background-color: #c3a0b1;
-  font-size: 1.25rem;
-  font-weight: 600;
+  color: #7E445F;
+  background-color: #ebccda;
+  font-size: 1.15rem;
+  font-weight: 500;
   line-height: 1.6em;
 }
 
 #about h3 {
   font-size: 1rem;
-  color: #c3a0b1;
-  font-weight: 500;
+  color: #7E445F;
+  font-weight: 400;
   line-height: 1.45em;
   margin-top: 20px;
 }
@@ -298,7 +298,6 @@ main {
 
 #skills h2 {
   margin: 0 0 40px 20px;
-  color: #489098;
 }
 
 #skills-wrapper,
@@ -318,7 +317,7 @@ main {
   font-weight: 600;
   padding: 15px 0;
   width: 60%;
-  color: #c5622b;
+  color: #8c6c41;
   display: flex;
   justify-content: center;
   flex-flow: column nowrap;
@@ -349,7 +348,6 @@ main {
 #projects h2 {
   border-bottom: 3.5px #fff8ed;
   margin: 0 0 20px 0;
-  color: #489098;
 }
 
 #projects .content-wrapper {
@@ -465,7 +463,6 @@ main {
 #contact h2 {
   margin: 80px 0 60px 0;
   width: 100%;
-  color: #489098;
 }
 
 #contact h2 span {
@@ -522,6 +519,7 @@ main {
 #contact h3 {
   text-align: center;
   margin-bottom: 30px;
+  color:#c5622b;
 }
 
 #contact i {
@@ -565,8 +563,9 @@ footer {
 
 footer span {
   font-size: 1em;
-  color: #94af3b;
-  font-weight: 600;
+  color: #435106;
+  font-weight: 400;
+  background: #e2edb6;
   padding: 0;
 }
 
@@ -606,7 +605,7 @@ footer .copyright p {
   margin-bottom: 20px;
   margin-top: 25px;
   font-size: 0.75em;
-  color: #826b4d;
+  color: #50442F;
 }
 
 /* ========================= */
@@ -1275,6 +1274,7 @@ footer .copyright p {
   #contact h3 {
     margin-bottom: 30px;
     font-size: 1.75rem;
+    color:#c5622b;
   }
 
   #contact i {
@@ -1299,7 +1299,6 @@ footer .copyright p {
 
   footer p span {
     font-size: 1em;
-    font-weight: 600;
   }
 
   footer .copyright p {
